issue #154 collapsable metadata well

--- a/www/src/DembeloMain/Resources/public/css/dembelo.scss
+++ b/www/src/DembeloMain/Resources/public/css/dembelo.scss
@@ -144,3 +144,7 @@ div.read {
   text-align: justify;
   font-size: 16px;
 }
+
+.readmetadatabutton {
+  cursor: pointer;
+}
